--- a/styles.css
+++ b/styles.css
@@ -28,4 +28,13 @@
 
 .sup-thin {
     font-size: 8pt;
+    top: -2ex;
+}
+
+.sup-decor {
+    text-decoration: none;
+}
+
+.txt-big {
+    font-size: 18pt;
 }
